--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#363636</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#ce3d3a</color>
+    <color name="colorMaskBackground">#33000000</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
